// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`updateTree updates a tree correctly if the amount, prices or craft flags changed 1`] = `
Object {
  "buyPrice": 50,
  "buyPriceEach": 10,
  "components": Array [
    Object {
      "buyPrice": 210,
      "buyPriceEach": 42,
      "components": undefined,
      "craft": false,
      "decisionPrice": 210,
      "id": 2,
      "output": 1,
      "quantity": 1,
      "totalQuantity": 5,
      "usedQuantity": 5,
    },
    Object {
      "buyPrice": 250,
      "buyPriceEach": 10,
      "components": Array [
        Object {
          "buyPrice": 500,
          "buyPriceEach": 10,
          "components": undefined,
          "craft": false,
          "decisionPrice": 500,
          "id": 4,
          "output": 1,
          "quantity": 2,
          "totalQuantity": 50,
          "usedQuantity": 50,
        },
      ],
      "craft": true,
      "craftPrice": 500,
      "decisionPrice": 500,
      "id": 3,
      "output": 1,
      "quantity": 5,
      "totalQuantity": 25,
      "usedQuantity": 25,
    },
    Object {
      "buyPrice": 25000,
      "buyPriceEach": 1000,
      "components": Array [
        Object {
          "buyPrice": 550,
          "buyPriceEach": 11,
          "components": undefined,
          "craft": false,
          "decisionPrice": 550,
          "id": 6,
          "output": 1,
          "quantity": 2,
          "totalQuantity": 50,
          "usedQuantity": 50,
        },
      ],
      "craft": true,
      "craftPrice": 550,
      "decisionPrice": 550,
      "id": 5,
      "output": 1,
      "quantity": 5,
      "totalQuantity": 25,
      "usedQuantity": 25,
    },
  ],
  "craft": true,
  "craftPrice": 1260,
  "decisionPrice": 1260,
  "id": 1,
  "output": 1,
  "quantity": 1,
  "totalQuantity": 5,
  "usedQuantity": 5,
}
`;

exports[`updateTree updates a tree correctly if the available items changed 1`] = `
Object {
  "buyPrice": 50,
  "buyPriceEach": 10,
  "components": Array [
    Object {
      "buyPrice": 0,
      "buyPriceEach": 42,
      "components": undefined,
      "craft": false,
      "decisionPrice": 0,
      "id": 2,
      "output": 1,
      "quantity": 1,
      "totalQuantity": 5,
      "usedQuantity": 0,
    },
    Object {
      "buyPrice": 250,
      "buyPriceEach": 10,
      "components": Array [
        Object {
          "buyPrice": 500,
          "buyPriceEach": 10,
          "components": undefined,
          "craft": false,
          "decisionPrice": 500,
          "id": 4,
          "output": 1,
          "quantity": 2,
          "totalQuantity": 50,
          "usedQuantity": 50,
        },
      ],
      "craft": true,
      "craftPrice": 500,
      "decisionPrice": 500,
      "id": 3,
      "output": 1,
      "quantity": 5,
      "totalQuantity": 25,
      "usedQuantity": 25,
    },
    Object {
      "buyPrice": 25000,
      "buyPriceEach": 1000,
      "components": Array [
        Object {
          "buyPrice": 550,
          "buyPriceEach": 11,
          "components": undefined,
          "craft": false,
          "decisionPrice": 550,
          "id": 6,
          "output": 1,
          "quantity": 2,
          "totalQuantity": 50,
          "usedQuantity": 50,
        },
      ],
      "craft": true,
      "craftPrice": 550,
      "decisionPrice": 550,
      "id": 5,
      "output": 1,
      "quantity": 5,
      "totalQuantity": 25,
      "usedQuantity": 25,
    },
  ],
  "craft": true,
  "craftPrice": 1050,
  "decisionPrice": 1050,
  "id": 1,
  "output": 1,
  "quantity": 1,
  "totalQuantity": 5,
  "usedQuantity": 5,
}
`;
